@@ -22,7 +22,7 @@ ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS
 SOFTWARE."""
 #
 # Version ##VERSION##; see changelog for revision history
-# $Id: reportbug,v 1.98.2.3 2006-08-20 23:50:19 lawrencc Exp $
+# $Id: reportbug,v 1.98.2.4 2006-08-22 16:50:16 lawrencc Exp $
 
 # Work around case where Python install might be broken (#290043)
 try:
@@ -100,7 +100,7 @@ def which_editor(default_editor=None):
     return editor
 
 def handle_editing(filename, dmessage, options, sendto, attachments, package,
-                   editor=None):
+                   editor=None, charset='utf-8'):
     if not editor:
         editor = options.editor
     editor = which_editor(editor)
@@ -109,7 +109,7 @@ def handle_editing(filename, dmessage, options, sendto, attachments, package,
     while True:
         if not skip_editing:
             (message, changed) = ui.spawn_editor(message or dmessage, filename,
-                                                 editor)
+                                                 editor, charset)
         skip_editing = False
         if not message:
             x = ''
@@ -919,11 +919,6 @@ class UI(object):
         if self.options.interface == 'text':
             ewrite('*** Welcome to reportbug.  Use ? for help at prompts. ***\n')
 
-        fromaddr = reportbug.get_user_id(self.options.email, self.options.realname)
-        ewrite("Using '%s' as your from address.\n", fromaddr)
-        if self.options.debugmode:
-            sendto = fromaddr
-
         try:
             blah = u'hello'.encode(charset)
         except LookupError:
@@ -935,6 +930,12 @@ class UI(object):
         else:
             ewrite("Detected character set: %s\n"
                    "Please change your locale if this is incorrect.\n\n", charset)
+
+        fromaddr = reportbug.get_user_id(self.options.email, self.options.realname, charset)
+        ewrite("Using '%s' as your from address.\n", fromaddr.encode(charset, 'replace'))
+        fromaddr = fromaddr.encode('utf-8')
+        if self.options.debugmode:
+            sendto = fromaddr
 
         edname = which_editor(self.options.editor)
         baseedname = os.path.basename(edname)
@@ -1583,7 +1584,7 @@ orphaned for a long period of time are often removed from the archive.\n''')
 
             addinfo = None
             if not self.options.noconf:
-                addinfo = "\n-- Package-specific info:\n"+file(filename).read()
+                addinfo = "\n-- Package-specific info:\n"+file(filename).read().decode('utf-8')
 
             os.unlink(filename)
             if addinfo and incfiles:
@@ -1645,12 +1646,13 @@ orphaned for a long period of time are often removed from the archive.\n''')
 
         if mailing:
             fh, filename = TempFile(prefix=tfprefix)
-            fh.write(message)
+            fh.write(message.encode(charset, 'replace'))
             fh.close()
             oldmua = mua or self.options.mua
             if not self.options.body and not self.options.bodyfile:
-                message = handle_editing(filename, message, self.options, sendto,
-                                         attachments, package)
+                message = handle_editing(filename, message, self.options,
+                                         sendto, attachments, package,
+                                         charset=charset)
             if not oldmua and self.options.mua:
                 mua = self.options.mua
             if mua:
